# Software_Game

./: .gitignore  README.md  client_net.c
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
Game/client/: CMakeLists.txt  client_KeyboardInput.cpp  client_KeyboardInput.h  client_KeybordInput.cpp  client_KeybordInput.h  client_WiiInput.cpp  client_WiiInput.h  client_common.h  client_define.h  client_gamestate.cpp  client_gamestate.hpp  client_go.cpp  client_input.cpp  client_input.h  client_main.cpp  client_map.cpp  client_map.hpp  client_move.cpp  client_move.h  client_music.cpp  client_music.hpp  client_musicfile.cpp  client_musicfile.h  client_musicfile.hpp  client_name.cpp  client_result.cpp  client_smart.cpp  client_smart.h  client_system.cpp  client_system.h  client_system.hpp  client_time.cpp  client_time.hpp  component.cpp  component.h  control_setup.cpp  debug.sh  go.h  graphic.cpp  graphic.h  (+13 more)
Game/client/chat/: build.sh  client.go  main.go  room.go
Game/client/chat/templates/: chat.html
Game/client/header/: client.h  client_common.h  client_input.h
Game/client/network/source/: net.cpp  receive.cpp  send.cpp
Game/client/system/source/: client_main.cpp
Game/createMap/src/: collision.js  define.js  edit.js  index.html  keyInput.js  main.js  mapdata.csv  object.js  renderer.js
Game/data/: .~lock.mapdata.csv#  SegModel.mtl  SegModel_Big.mtl  mapdata.csv
Game/data/ui/: sample.html  ui.js
Game/header/: constants.h  map.h  map.hpp
Game/launch/: README.md  main.js  main.ts  package-lock.json  package.json  readme.md
Game/launch/.gotron/: .eslintrc.yml  .gitignore  main.js  package-lock.json  package.json  tsconfig.json
Game/launch/.gotron/assets/: index.html
Game/launch/.gotron/bace/: index.html  package.json  tsconfig.json  webpack.config.js
Game/launch/.gotron/bace/src/: etab.js
Game/launch/.gotron/client/: index.html  package.json  webpack.config.js
Game/launch/.gotron/client/src/: client.js
Game/launch/.gotron/css/: main.css
Game/launch/.gotron/server/: index.html  webpack.config.js
Game/launch/.gotron/server/src/: server.js
Game/launch/src/: client.html  client.js  etab.js  index.html  main.js  server.html  server.js
Game/server/: CMakeLists.txt  debug.sh  makefile  net.cpp  network_get.cpp  network_send.cpp  server_common.h  server_main.cpp  server_map.cpp  server_map.hpp  sys.cpp
Game/server/header/: server_common.h
Game/server/network/source/: net.cpp  receive.cpp  send.cpp
Game/server/system/: server_main.c  sys.cpp
Rules/: README.md
Rules/Branch/: README.md
Software_Game_OpenGL/: text.txt
Software_Game_OpenGL/graphics/: client_map.cpp  client_map.hpp  graphic.cpp  graphic.h  graphic_main.cpp  graphic_test.cpp  graphic_test.hpp  image.cpp  image.hpp  makefile
Software_Game_OpenGL/header/: client_common.h  constants.h  map.hpp
class-diagram/Scripts/: ClassModuleForClient.pu  CommunicationModel.pu  DataModule.pu  ObjectModel.pu
class-diagram/Scripts/IncludeFiles/: Layout.pu  setting.pu
client/: net.c  receive.c  receive.h  send.c  send.h
createMap/: my.csv  package.json  readme.md
createMap/src/: edit.js  index.html  main.css  main.js  map.js  renderer.js  tmpp.js
doc/: README.md
doc/command_protocol/: README.md
doc/inputs/: README.md
doc/inputs/keyboard/: README.md
doc/inputs/keybord/: README.md
doc/inputs/wii_controler/: README.md  button.md
doc/install_library/: README.md
doc/map/: map.txt
doc/proposal/: Makefile  README.md  proposal.aux  proposal.dvi  proposal.tex  proposalcp.aux  proposalcp.dvi  proposalcp.tex  ガントチャート.xlsx
doc/system_modules/: README.md
ゲーム/クライアント/ヘッダ/: client_common.h
